syntax = "proto3";
package payments;

service Bitcoin {
    rpc SendPayment (BTCPaymentRequest) returns (BTCPaymentResponse);
    rpc CheckBalance (BTCBalanceRequest) returns (BTCBalanceResponse);
    rpc CloseConnection (BTCExitInit) returns (BTCExitAck);
    rpc OpenConnection (BTCSignIn) returns (BTCSignInAck);
    rpc GetUsers (LiveUsersRequest) returns (LiveUsersResponse);
}

message BTCPaymentRequest {
    string from_addr = 1;
    string to_addr   = 2;
    uint32 amount   = 3;
}

message BTCPaymentResponse {
    bool   successful = 1;
    string message    = 2;
}

message BTCBalanceRequest {
    string client_id = 1;
}

message BTCBalanceResponse {
    int32 balance = 1;
}

message BTCExitInit {
    string client_id = 1;
}

message BTCExitAck {}

message BTCSignIn {
    string client_id = 1;
}

message BTCSignInAck {
    bool successful = 1;
    string message  = 2;
}

message LiveUsersRequest {
    string client_id = 1;
}

message LiveUsersResponse {
    string users = 1;
}
